--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -45,7 +45,7 @@
 
 
         .InkabetSlide .bzm_text {
-            width: 100%;
+            width: 95%;
             margin-top: 20px;
             margin-bottom: 15px;
             margin-left: 10px;
@@ -88,7 +88,7 @@
 
         .InkabetSlide .te-cover,
         .InkabetSlide .te-transition {
-            width: 320px;
+            width: 318px;
             height: 247px;
         }
 
@@ -105,7 +105,7 @@
 
         .InkabetSlide .te-cover>img,
         .InkabetSlide .te-images>img {
-            width: 320px;
+            width: 318px;
             height: 247px;
         }
 
@@ -229,12 +229,12 @@
                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:19px; text-align:left;">
 						  Floors: the main asset in your home
 						</span> <br>
-                        <span class="bzm_text_medium" style="color: black;line-height:1.1; font-size:12.5px; width:95%; text-align:left;">
+                        <span class="bzm_text_medium" style="color: black;line-height:1.1; font-size:12px; width:95%; text-align:left;">
                         <p style="margin-top: 10px; line-height: 1.6em;">
                             Roca USA is the perfect advisor when it comes to floors. Home decoration can be minimalistic while allowing the floors to be the center of attention of your home.<br><br> A good floor combination with the correct furniture could transform an entire room into a piece of art. </p>
 						</span>
                         <div class="logo">
-                            <img src="https://i.imgur.com/RK6MtSQ.jpg" style="height:35px">
+                            <img src="https://i.imgur.com/RK6MtSQ.jpg" style="height:35px; margin-top: -15px;">
 
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                 _removeChildrens(front);
                 for (var i = 0; i < front.length; i++) {
                     var img = document.createElement('img');
-                    img.setAttribute('style', 'width: 320px;height: 247px;');
+                    img.setAttribute('style', 'width: 318px;height: 247px;');
                     img.setAttribute('src', urlLast);
                     front[i].appendChild(img);
                 }
@@ -339,7 +339,7 @@
                 _removeChildrens(back);
                 for (var i = 0; i < back.length; i++) {
                     img = document.createElement('img');
-                    img.setAttribute('style', 'width: 320px;height: 247px;');
+                    img.setAttribute('style', 'width: 318px;height: 247px;');
                     img.setAttribute('src', urlCurrent);
                     back[i].appendChild(img);
                 }
