Fixed CTA button bottom alignment to 50%

--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -31,7 +31,7 @@
         
            .tgx_logo {
             position: absolute;
-            bottom: 475px;
+            bottom: 50%;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
