--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <title>Slider_Huawei</title>
     <style>
         .InkabetSlide a,
@@ -31,13 +32,14 @@
         
            .tgx_logo {
             position: absolute;
-            bottom: 50%;
+            bottom: 47.5%;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
             margin-left: 45%;
             left: -30px;
             background-color: #3399FE;
+            font-family: 'Lato', sans-serif;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
