Changed CTA Bottom alignment

--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -32,7 +32,7 @@
         
            .tgx_logo {
             position: absolute;
-            bottom: 47.5%;
+            top:232.5px;
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
