Correccion de texto

--- a/Roca/fade.html
+++ b/Roca/fade.html
@@ -127,14 +127,14 @@
             position: absolute;
             top: 53%;
             left: 7.5px;
-            width: 98%;
+            width: 95%;
             padding: 0.3em;
-            line-height: 1.4em;
+            line-height: 1.1em;
             color: #453936;
         }
 
         .tgx_text_title {
-            font-size: 90%;
+            font-size: 99%;
             color: black;
             display: inline-block;
             width: 100%;
@@ -305,7 +305,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -5px;
+            margin-top: -21px;
             margin-right: -12px
         }
 
@@ -335,7 +335,7 @@
             </span>
             <br/>  
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-right:10px; margin-top: -1px">
+                <p style="margin-right:10px; margin-top:9px; font-size: 13px;">
                    Roca USA, a leader in the tile industry, brings you the best advice and options for your home renovation. <br>From classic looking tiles to eccentric trends, this summer you can create your dream home. <br> Let Roca USA show you the newest market tendencies and give you tips on how to use tile to have fun while renovating your home.
                 </p> 
             </span> 
