--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -36,7 +36,7 @@
             width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 45%;
+            margin-left: 49%;
             left: -30px;
             background-color: #3399FE;
             font-family: 'Lato', sans-serif;
@@ -48,7 +48,7 @@
 
         .InkabetSlide .bzm_text {
             width: 95%;
-            margin-top: 20px;
+            margin-top: 25px;
             margin-bottom: 15px;
             margin-left: 10px;
             text-align: left;
@@ -57,7 +57,7 @@
 
         .InkabetSlide .bzm_text_bold,
         .InkabetSlide .bzm_text_medium {
-            line-height: 1.4;
+            line-height: 1em;
             text-decoration: none;
             color: #000;
         }
@@ -71,7 +71,7 @@
         .InkabetSlide .bzm_text_medium {
             font-size: 16px;
             font-weight: 400;
-            line-height: 1.4em;
+            line-height: 1em;
         }
         
          .InkabetSlide .bzm_text_small {
@@ -228,15 +228,15 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:19px; text-align:left;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:21px; text-align:left;">
 						  Floors: the main asset in your home
 						</span> <br>
-                        <span class="bzm_text_medium" style="color: black;line-height:1.1; font-size:12px; width:95%; text-align:left;">
-                        <p style="margin-top: 10px; line-height: 1.6em;">
-                            Roca USA is the perfect advisor when it comes to floors. Home decoration can be minimalistic while allowing the floors to be the center of attention of your home.<br><br> A good floor combination with the correct furniture could transform an entire room into a piece of art. </p>
+                        <span class="bzm_text_medium" style="color: black;line-height:1em; font-size:14px; width:95%; text-align:left;">
+                        <p style="margin-top: 10px; line-height: 1.1em;">
+                            Roca USA is the perfect advisor when it comes to floors. Home decoration can be minimalistic while allowing the floors to be the center of attention of your home.<br> A good floor combination with the correct furniture could transform an entire room into a piece of art. </p>
 						</span>
                         <div class="logo">
-                            <img src="https://i.imgur.com/RK6MtSQ.jpg" style="height:35px; margin-top: -15px;">
+                            <img src="https://i.imgur.com/RK6MtSQ.jpg" style="height:35px; margin-top: -25px;">
 
                         </div>
                     </div>
