--- a/RealMadrid/videoEspa.html
+++ b/RealMadrid/videoEspa.html
@@ -68,9 +68,9 @@
 				
 			</div>
 
-			<div style="bottom:0px;height: 1px;text-align:left;margin-top:-5px;">
+			<div style="bottom:0px;height: 1px;text-align:left;margin-top:-10px;">
                 <div class="logo">
-                    <img src="https://i.imgur.com/Z3NquqA.png" style="height:28px">
+                    <img src="https://i.imgur.com/wvCCVQM.jpg" style="height:30px">
                 </div>
 			</div>
     </a>
