--- a/RealMadrid/fadeEspa.html
+++ b/RealMadrid/fadeEspa.html
@@ -253,8 +253,8 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">Zona VIP: Visibilidad perfecta, atención personalizada, catering exclusivo... ¿A qué esperas?</span></div>
-            <div style="bottom:0px;height: 26px;text-align:right;margin-top:0px;"> 
-              <img src="https://i.imgur.com/Z3NquqA.png" style="height:28px;margin-right:0px;">
+            <div style="bottom:0px;height: 26px;text-align:right;margin-top:-2px;"> 
+              <img src="https://i.imgur.com/wvCCVQM.jpg" style="height:30px;margin-right:0px;">
             </div>
         </a>
     </div>
