--- a/RealMadrid/Cube3dEspa.html
+++ b/RealMadrid/Cube3dEspa.html
@@ -796,7 +796,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i104.image.html:image/html-->
 <img id="i104" src="https://i.imgur.com/3nsEP0i.jpg"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
-<img id="i64" src="https://i.imgur.com/Z3NquqA.png"/>
+<img id="i64" src="https://i.imgur.com/wvCCVQM.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -810,7 +810,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/inLHqQt.jpg"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
-<img id="i66" src="https://i.imgur.com/Z3NquqA.png"/>
+<img id="i66" src="https://i.imgur.com/wvCCVQM.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -824,7 +824,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/2SSYF2m.jpg"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
-<img id="i68" src="https://i.imgur.com/Z3NquqA.png"/>
+<img id="i68" src="https://i.imgur.com/wvCCVQM.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
