Correcciones de texto, diagramacion, para ambos anuncios

--- a/Roca/fade.html
+++ b/Roca/fade.html
@@ -134,11 +134,14 @@
         }
 
         .tgx_text_title {
-            font-size: 99%;
+            font-size: 106%;
             color: black;
             display: inline-block;
-            width: 100%;
+            width: 102%;
             margin-bottom: -5px;
+            text-align: center;
+            margin-left: -10px
+                
         }
 
         .tgx_text_light {
@@ -155,6 +158,7 @@
 
         .tgx_text_small {
             font-size: 66%;
+            text-align: justify
             
         }
 
