--- a/ROCA 2/fade.html
+++ b/ROCA 2/fade.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
-    <title>320x480 - Argeta</title>
+    <title>320x480 -roca</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <style>
-        body.tgx {
+        body.roca {
             background-color: #FFFFFF;
             color: black;
             font-family: 'Lato', sans-serif;
@@ -23,34 +23,34 @@
             color: white;
         }
 
-        .tgx_wrapper {
-            position: relative;
+        .roca_wrapper {
+            position:absolute;
             overflow: hidden;
             border: 1px solid #c5c5c5;
             cursor: pointer;
         }
 
-        .tgx_wrapper.size_300x250 {
+        .roca_wrapper.size_300x250 {
             width: 298px;
             height: 248px;
         }
 
-        .tgx_wrapper.size_320x480 {
+        .roca_wrapper.size_320x480 {
             width: 318px;
             height: 478px;
         }
 
-        .tgx_wrapper.size_320x50 {
+        .roca_wrapper.size_320x50 {
             width: 318px;
             height: 48px;
         }
 
-        .tgx_wrapper.size_728x90 {
+        .roca_wrapper.size_728x90 {
             width: 726px;
             height: 88px;
         }
 
-        .tgx_cover {
+        .roca_cover {
             position: relative;
             width: 100%;
             height: 50%;
@@ -73,7 +73,7 @@
             background-position-x: -40px;
         }
 
-        .tgx_cover .tgx_logo {
+        .roca_cover .roca_logo {
             position: absolute;
             bottom: -15px;
             width: 60px;
@@ -87,43 +87,43 @@
             text-align: center;
         }
 
-        .tgx_cover .tgx_logo span {
+        .roca_cover .roca_logo span {
             color: white;
         }
 
-        .tgx_logo img {
+        .roca_logo img {
             width: 100%;
             height: auto;
         }
 
-        .tgx_pos_tl {
+        .roca_pos_tl {
             top: 3%;
             left: 3%;
         }
 
-        .tgx_pos_tr {
+        .roca_pos_tr {
             top: 3%;
             right: 3%;
         }
 
-        .tgx_pos_bl {
+        .roca_pos_bl {
             bottom: 3%;
             left: 3%;
         }
 
-        .tgx_pos_br {
+        .roca_pos_br {
             bottom: 3%;
             right: 3%;
         }
 
-        .tgx_pos_bm {
+        .roca_pos_bm {
             bottom: 3%;
             left: calc(100% - 70%);
         }
 
         /* cover height + 5% */
 
-        .tgx_text {
+        .roca_text {
             position: absolute;
             top: 54%;
             left: 7.5px;
@@ -133,7 +133,7 @@
             color: #453936;
         }
 
-        .tgx_text_title {
+        .roca_text_title {
             font-size: 90%;
             color: #453936;
             display: inline-block;
@@ -142,19 +142,19 @@
             margin-top: -10px
         }
 
-        .tgx_text_light {
+        .roca_text_light {
             font-weight: 400;
         }
 
-        .tgx_text_medium {
+        .roca_text_medium {
             font-weight: 700;
         }
 
-        .tgx_text_bold {
+        .roca_text_bold {
             font-weight: 900;
         }
 
-        .tgx_text_small {
+        .roca_text_small {
             font-size: 75%;
         }
 
@@ -253,17 +253,17 @@
             }
         }
 
-        .tgx_sponsoredby {
+        .roca_sponsoredby {
             position: absolute;
             z-index: 99;
         }
 
-        .tgx_sponsoredby.tgx_pos_br {
+        .roca_sponsoredby.roca_pos_br {
             right: 1%;
             bottom: 0% !important;
         }
 
-        .tgx_sponsoredby .sponsor {
+        .roca_sponsoredby .sponsor {
             font-size: 9px;
             display: inline-block;
             float: left;
@@ -271,17 +271,17 @@
             margin-top: 7px;
         }
 
-        .tgx_sponsoredby:hover .sponsor {
+        .roca_sponsoredby:hover .sponsor {
             opacity: 1;
         }
 
-        .tgx_sponsoredby .tgx_logo {
+        .roca_sponsoredby .roca_logo {
             width: 70px;
             display: inline-block;
             float: right;
         }
 
-        .tgx_button {
+        .roca_button {
             position: absolute;
             bottom: 5px;
             left: 85%;
@@ -295,7 +295,7 @@
             cursor: pointer;
         }
 
-        .tgx_button:hover {
+        .roca_button:hover {
             background-color: #d34100;
         }
         
@@ -317,24 +317,24 @@
     </script>
 </head>
 
-<body class="tgx">
-    <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
+<body class="roca">
+    <div class="roca_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
-        <div class="tgx_cover bg cover-1 carousel-item item-1">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">More info</span></div>
+        <div class="roca_cover bg cover-1 carousel-item item-1">
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">More info</span></div>
         </div>
-        <div class="tgx_cover bg cover-2 carousel-item item-2">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">More info</span></div>
+        <div class="roca_cover bg cover-2 carousel-item item-2">
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">More info</span></div>
         </div>
-        <div class="tgx_cover bg cover-3 carousel-item item-3">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">More info</span></div>
+        <div class="roca_cover bg cover-3 carousel-item item-3">
+            <div class="roca_logo"><span class="roca_text_bold roca_text_small">More info</span></div>
         </div>
-        <div class="tgx_text"> 
-            <span class="tgx_text_title tgx_text_bold">
+        <div class="roca_text"> 
+            <span class="roca_text_title roca_text_bold">
                The most amazing yet affordable tiles you’ll want in your home renovation this summer
             </span>
             <br/>  
-            <span class="tgx_text_light tgx_text_small" style="color:black;">
+            <span class="roca_text_light roca_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 0px;">
                     Roca USA, a leader in the tile industry, brings you the best advice and options for your home renovation. 
                     From classic looking tiles to eccentric trends, this summer you can create your dream home. 
