Correccion de borde

--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -19,7 +19,7 @@
             height: 480px;
             margin: 0 auto;
             background-color: #FFF;
-            
+            border: 1px solid #c5c5c5;
         }
 
         .InkabetSlide .te-wrapper {
