Cambio de video 1 en Blue Telecom

--- a/BlueTelecom/video.html
+++ b/BlueTelecom/video.html
@@ -256,7 +256,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/3scgqN6vRLY?rel=0&autoplay=1&modestbranding=0&playlist=3scgqN6vRLY&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/Z7oyMy9ECHY?rel=0&autoplay=1&modestbranding=0&playlist=Z7oyMy9ECHY&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
