--- a/ROCA 2/fade.html
+++ b/ROCA 2/fade.html
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>320x480 -roca</title>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <style>
         body.roca {
             background-color: #FFFFFF;
             color: black;
-            font-family: 'Lato', sans-serif;
+            font-family: Source Sans Pro;
             margin: 0;
             padding: 0;
         }
@@ -26,8 +27,9 @@
         .roca_wrapper {
             position:absolute;
             overflow:hidden;
-            
+            border: 1px solid #c5c5c5;
             cursor: pointer;
+            font-family: Source Sans Pro
         }
 
         .roca_wrapper.size_300x250 {
@@ -76,10 +78,10 @@
         .roca_cover .roca_logo {
             position: absolute;
             bottom: -15px;
-            width: 60px;
+            width:75px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 50%;
+            margin-left: 45%;
             left: -30px;
             background-color: #3399FE;
             padding: 5px;
@@ -129,17 +131,20 @@
             left: 7.5px;
             width: 98%;
             padding: 0.3em;
-            line-height: 1.4em;
+            line-height: 1em;
             color: #453936;
         }
 
         .roca_text_title {
-            font-size: 90%;
+            font-size: 135%;
             color: #453936;
             display: inline-block;
-            width: 100%;
+            width: 95%;
             margin-bottom: -40px;
-            margin-top: -10px
+            margin-top: 7px;
+            text-align: center;
+            margin-left: -10px;
+            line-height: 1.05em
         }
 
         .roca_text_light {
@@ -155,7 +160,7 @@
         }
 
         .roca_text_small {
-            font-size: 75%;
+            font-size: 97%;
         }
 
         ul {
@@ -279,6 +284,7 @@
             width: 70px;
             display: inline-block;
             float: right;
+             font-family: 'Lato', sans-serif;
         }
 
         .roca_button {
@@ -305,14 +311,14 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -27px;
+            margin-top: -15px;
             margin-right: -10px
         }
 
     </style>
     <script>
         function openUrl() {
-            window.open("http://telmex.com/web/empresas/ciberinteligencia");
+            window.open("http://rocatileusa.com/");
         }
     </script>
 </head>
@@ -331,14 +337,12 @@
         </div>
         <div class="roca_text"> 
             <span class="roca_text_title roca_text_bold">
-               The most amazing yet affordable tiles you’ll want in your home renovation this summer
+              The tiles you’ll want in your home renovation this summer
             </span>
             <br/>  
             <span class="roca_text_light roca_text_small" style="color:black;">
-                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 0px;">
-                    Roca USA, a leader in the tile industry, brings you the best advice and options for your home renovation. 
-                    From classic looking tiles to eccentric trends, this summer you can create your dream home. 
-                    Let Roca USA show you the newest market tendencies and give you tips on how to use tile to have fun while renovating your home.
+                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px;">
+                    Roca USA brings you the best advice and options for your home renovation.  Let Roca USA show you the newest market tendencies and give you tips on how to use tile to have fun while renovating your home.
 
 
                 </p> 
