--- a/Roca/slider.html
+++ b/Roca/slider.html
@@ -27,7 +27,7 @@
             width: 318px;
             height: 478px;
             overflow: hidden;
-            font-family: Source Sans Pro
+            
         }
         
            .tgx_logo {
@@ -52,7 +52,8 @@
             margin-bottom: 15px;
             margin-left: 10px;
             text-align: center;
-            width: 89%
+            width: 89%;
+            font-family: Source Sans Pro
         }
 
         .InkabetSlide .bzm_text_bold,
