--- a/BlueTelecom/fade.html
+++ b/BlueTelecom/fade.html
@@ -28,7 +28,9 @@
             position:absolute;
             overflow:hidden;
             cursor: pointer;
-            font-family: Source Sans Pro
+            font-family: Source Sans Pro;
+            border: 1px solid #c5c5c5
+                
         }
 
         .bluefade_wrapper.size_300x250 {
