--- a/koketa/Cube3d.html
+++ b/koketa/Cube3d.html
@@ -840,7 +840,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Pensada en tu esencia de mujer</div>
 <!--#/#--><!--#i4.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/LMz8SKr.png"/>
+<img id="i58" src="https://i.imgur.com/ziV0tBB.png"/>
 <!--#/#--><!--#i4.i62.image.html:image/html-->
 <img id="i62" src="https://i.imgur.com/iiRVE6C.png"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
