--- a/ROCA 2/fade.html
+++ b/ROCA 2/fade.html
@@ -2,6 +2,45 @@
 <html lang="en">
 
 <head>
+    <!-- Adform API Script -->
+    <script type="text/javascript">
+        document.write('<script src="' + (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=' + Math.random()) + '"><\/script>');
+    </script>
+    
+    <!--Adform Global Clicktag START-->
+    <script type="text/javascript">
+        function adfOpenGlobalClickTAG() {
+            var adfClickTAGName = 'clickTAG',
+                adfClickTAGUrl = 'http://rocatileusa.com/';
+
+            window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
+        }
+        if (window.addEventListener) {
+            window.addEventListener('click', function(e) {
+                if (e.button !== 0) return;
+                e.stopPropagation();
+                e.preventDefault();
+                adfOpenGlobalClickTAG();
+            }, true);
+        } else {
+            document.attachEvent('onclick', function() {
+                adfOpenGlobalClickTAG();
+            });
+        }
+
+        window.onload = function() {
+            dhtml.sendEvent('1', 'PageView', 'PageView');
+        }
+
+        window.onclick = function() {
+            dhtml.sendEvent('9', 'Click Out', 'Click Out');
+        }
+
+        /*document.getElementById('housell').addEventListener('click', function(e){
+            window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', '%%c1;cpdir='), dhtml.getVar('landingPageTarget', '_blank'));
+        });*/
+    </script>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -28,7 +67,8 @@
             position:absolute;
             overflow:hidden;
             cursor: pointer;
-            font-family: Source Sans Pro
+            font-family: Source Sans Pro;
+            border: 1px solid #c5c5c5;
         }
 
         .roca_wrapper.size_300x250 {
@@ -315,17 +355,13 @@
         }
 
     </style>
-    <script>
-        function openUrl() {
-            window.open("http://rocatileusa.com/");
-        }
-    </script>
+  
 </head>
 
 <body class="roca">
     <div class="roca_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
-       
-        <div class="roca_cover bg cover-1 carousel-item item-1">
+      <a href="%%c1;cpdir=" style="display: block;" target="_blank">
+            <div class="roca_cover bg cover-1 carousel-item item-1">
             <div class="roca_logo"><span class="roca_text_bold roca_text_small">More info</span></div>
         </div>
         <div class="roca_cover bg cover-2 carousel-item item-2">
