--- a/Tres Cielos/Cube3d.html
+++ b/Tres Cielos/Cube3d.html
@@ -882,12 +882,7 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i5.i185.image.js:image/base/js*/
+/*#i5.i185.image.js:image/base/js*/
 
 /*#/#*//*#i5.i193.image.js:image/base/js*/
 
@@ -900,11 +895,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i187.image.js:image/base/js*/
@@ -918,12 +909,7 @@ document.getElementById('i99').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*/
+
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
