--- a/ENFABEBE/video.html
+++ b/ENFABEBE/video.html
@@ -24,7 +24,7 @@
 		.Adidas1Video .bzm_pos_bl{bottom:3%;left:3%}
 		.Adidas1Video .bzm_pos_br{bottom:3%;right:3%}
 		.Adidas1Video .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}
-		.Adidas1Video .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000;}
+		.Adidas1Video .bzm_text{margin-top:10px; padding:6px 0 10px .3em;line-height:1.1;color:#000;}
 		.Adidas1Video .bzm_text_title{font-size:14px;color:#000;}
 		.Adidas1Video .bzm_text_light{font-size:10px;font-weight:0}
 		.Adidas1Video .bzm_text_medium{font-size:15px;font-weight:500;line-height:1.4}
@@ -95,11 +95,11 @@
 			</div>
 		</div>
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="font-size:17px; color:#000;">¿Sabes como mecer a tu bebe?</span>
+				<span class="bzm_text_title  bzm_text_bold" style="font-size:20px; color:#000;">¿Sabes como mecer a tu bebe?</span>
 				
 			</div>
 
-			<div style="bottom:0px;height: 1px;text-align:left;margin-top:4px;">
+			<div style="bottom:0px;height: 1px;text-align:left;margin-top:15px;">
                 <div class="logo">
                     <img src="https://i.imgur.com/WBycnW1.png" style="height:30px">
                 </div>
