Changed Font size title format

--- a/ENFABEBE/video.html
+++ b/ENFABEBE/video.html
@@ -54,7 +54,7 @@
             opacity: 1;
             background-color: rgb(1, 44, 131);
             font-family: "Source Sans Pro";
-            font-size: 14px;
+            font-size: 18!important;
             color: #ffffff;
             font-weight: bold;
             font-style: normal;
@@ -95,11 +95,11 @@
 			</div>
 		</div>
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="font-size:20px; color:#000;">¿Sabes como mecer a tu bebe?</span>
+				<span class="bzm_text_title  bzm_text_bold" style="font-size:18px; color:#000;">¿Sabes como mecer a tu bebe?</span>
 				
 			</div>
 
-			<div style="bottom:0px;height: 1px;text-align:left;margin-top:15px;">
+			<div style="bottom:0px;height: 1px;text-align:left;margin-top:12.5px;">
                 <div class="logo">
                     <img src="https://i.imgur.com/WBycnW1.png" style="height:30px">
                 </div>
