Correccion video grande. titulo

--- a/ENFABEBE/videobig.html
+++ b/ENFABEBE/videobig.html
@@ -126,6 +126,8 @@
             display: inline-block;
             width: 110%;
             margin-bottom: 8px;
+            text-align: center;
+            margin-left: -10px;
         }
 
         .tgx_text_light {
