Slider para HBO y correccion de slider

--- a/hbo/slider.html
+++ b/hbo/slider.html
@@ -199,8 +199,8 @@
 	 <div class="te-container">
         <a href="https://play.hbogo.com/" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/UdMsmZp.png" alt="" /> <img src="https://i.imgur.com/eXzC4x6.png" alt="" /> <img src="https://i.imgur.com/waKuXNL.png" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/UdMsmZp.png" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/YlVP0VT.jpg" alt="" /> <img src="https://i.imgur.com/ugGPCSt.jpg" alt="" /> <img src="https://i.imgur.com/Nq2J0Wd.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/YlVP0VT.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
