fixed some issues with css code

--- a/hbo/story-resize.html
+++ b/hbo/story-resize.html
@@ -27,8 +27,8 @@
     }
 
     .HuaweiScroll1 .bzm_wrapper.size_320x480 {
-        width: 300px;
-        height: 600px;
+        width: 300px!important;
+        height: 600px!important;
         background-color: #FFF;
         overflow-y: auto;
     }
@@ -73,7 +73,7 @@
         line-height: 1.1;
         color: #000;
         width: 95%;
-        margin-left: 0zpx;
+        margin-left: 0px;
         
             
     }
@@ -130,7 +130,7 @@
     }
 
     .HuaweiScroll1 .carousel-container {
-        width: 320px;
+        width: 300px;
         height: 150px;
         overflow-y: hidden
     }
