Correccion de logo

--- a/hbo/story-resize.html
+++ b/hbo/story-resize.html
@@ -363,7 +363,7 @@
                 <a href="http://chile.travel/pt-br/o-que-fazer/aventura-e-esporte/ski-y-snowboard" style="line-height: 31px; padding-right:10px;" target="_blank">
                   </a>
                   
-                   <a> <img class="logo-enterp" src="https://i.imgur.com/opsumkT.png" widht="40px" height="px" ></a> 
+                   <a> <img class="logo-enterp" src="https://i.imgur.com/opsumkT.png" widht="40px" height="30px" ></a> 
                         </div>
                     </i>
                 </span>
