Correccion de titulo

--- a/hbo/video.html
+++ b/hbo/video.html
@@ -121,11 +121,13 @@
         }
 
         .tgx_text_title {
-            font-size: 110%;
+            font-size: 130%;
             color: #453936;
             display: inline-block;
             width: 110%;
             margin-bottom: 8px;
+            text-align: center;
+            margin-left: -10px;
             
         }
 
