Slides y fades con nuevos textos para Midas

--- a/Midas/fade5.html
+++ b/Midas/fade5.html
@@ -109,7 +109,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
-            margin-top: 10px
+            margin-top: 15px
                 
         }
 
@@ -268,8 +268,8 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">¿Quieres ahorrar tiempo y dinero en la revisión de tu coche?</span></div>
-            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:14px; font-style: italic; margin-top: -4px; width: 85%;">No te lo preguntes, <strong> disfrútalos.</strong></span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">¿Miedo al taller?</span></div>
+            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:14px; font-style: italic; margin-top: -4px; width: 85%;">Olvídate de sustos con Midas</span></div>
             <div style="bottom:0px;height:26px;text-align:right;margin-top:-9px;"> 
               <img src="https://i.imgur.com/jOh1dFA.png" style="height:33px;margin-right:5px;">
             </div>
