--- a/BlueTelecom/fade.html
+++ b/BlueTelecom/fade.html
@@ -55,24 +55,24 @@
 
         .bluefade_cover {
             position: relative;
-            width: 110%;
-            height: 50%;
+            width: 100%;
+            height: 55%;
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/U2lt3I1.png");
+            background: url("https://i.imgur.com/yKFmYNw.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/zbdbXjp.png");
+            background: url("https://i.imgur.com/F2yiolD.jpg");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/laaQexu.png");
+            background: url("https://i.imgur.com/H6EMfLU.jpg");
             background-size: cover;
           
         }
@@ -143,7 +143,7 @@
             display: inline-block;
             width: 95%;
             margin-bottom: -40px;
-            margin-top: 7px;
+            margin-top: 20px;
             text-align: center;
             margin-left: -10px;
             line-height: 1.05em
@@ -313,8 +313,8 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -41px;
-            margin-right: 25px;
+            margin-top: -45px;
+            margin-right: 20px;
         }
 
     </style>
