Correcciones de texto y agregado de CTA en los cubos de Blue Telecom

--- a/BlueTelecom/BlueCube4.html
+++ b/BlueTelecom/BlueCube4.html
@@ -507,10 +507,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 89px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 96px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 96px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 96px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 96px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -520,6 +520,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i181.button.css:button/base/css*/
+#i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(3,69,102,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 0px; margin:-0px; border-style: solid; }
+#i181:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i181:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i181.i182.positioning.css:positioning/base/css.1*/
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 30px;
+        -ms-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -546,13 +557,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 279px; height: 59px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 92px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 92px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 92px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 92px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -692,6 +703,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-12px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-12px, 0px) rotate(0deg);
 }
+/*#/#*//*#i5.i185.button.css:button/base/css*/
+#i185 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(3,69,102,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 0px; margin:-0px; border-style: solid; }
+#i185:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i185:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i185.i186.positioning.css:positioning/base/css.1*/
+#i185 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 30px;
+        -ms-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -720,10 +742,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 91px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -733,6 +755,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
+}
+/*#/#*//*#i6.i189.button.css:button/base/css*/
+#i189 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(3,69,102,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 10px; border-color: #006496; border-width: 0px; margin:-0px; border-style: solid; }
+#i189:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i189:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i189.i190.positioning.css:positioning/base/css.1*/
+#i189 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 30px;
+        -ms-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(91px, 152px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -771,6 +804,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i14">Descubre Blue Telecomm inalámbrico para tu hogar</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/S6PlFF9.png"/>
+<!--#/#--><!--#i4.i181.button.html:button/html-->
+<button id="i181">Más Información</button>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -783,6 +818,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i24">Con Blue Telecomm inalámbrico para tu hogar la vida es más fácil</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/srNIvr0.png"/>
+<!--#/#--><!--#i5.i185.button.html:button/html-->
+<button id="i185">Más Información</button>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -795,6 +832,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i34">Internet para tu casa en 3 pasos</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/2yLKSjd.png"/>
+<!--#/#--><!--#i6.i189.button.html:button/html-->
+<button id="i189">Más Información</button>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -838,6 +877,19 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
+/*#/#*//*#i181.i183.actions.js:actions/base/js*/
+/* Name: On Click; */
+var el = document.getElementById('i181');
+
+el.addEventListener('click', function(e){
+    /*#i183.i184.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -854,6 +906,19 @@ document.getElementById('i4').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
+/*#/#*//*#i185.i187.actions.js:actions/base/js*/
+/* Name: On Click; */
+var el = document.getElementById('i185');
+
+el.addEventListener('click', function(e){
+    /*#i187.i188.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -877,6 +942,19 @@ document.getElementById('i99').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i189.i191.actions.js:actions/base/js*/
+/* Name: On Click; */
+var el = document.getElementById('i189');
+
+el.addEventListener('click', function(e){
+    /*#i191.i192.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://bluetelecomm.mx/internet-inalambrico.php'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i6').addEventListener('click', function(e){
@@ -914,6 +992,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i181.button.meta:button/meta*/
+name: Más Información;
+customName: false;
+/*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -933,6 +1016,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i185.button.meta:button/meta*/
+name: Más Información;
+customName: false;
+/*#/#*//*#i185.i186.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
@@ -952,6 +1040,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i189.button.meta:button/meta*/
+name: Más Información;
+customName: false;
+/*#/#*//*#i189.i190.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
