correcciòn de cta de sliders blue telecom

--- a/BlueTelecom/blueSlide6.html
+++ b/BlueTelecom/blueSlide6.html
@@ -221,7 +221,9 @@
         }
         
         .cta {
-            bottom: 305px;
+            
+            position: fixed;
+            top: 152px;
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
