--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -222,7 +222,8 @@
         
         .cta {
 
-            bottom: 305px;
+            position: fixed;
+            top: 155px;
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
