fade extendido para 7eleven

--- a/7eleven/fade.html
+++ b/7eleven/fade.html
@@ -320,7 +320,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://www.cinepolisklic.com/pelicula/jurassic-world-el-reino-caido-preventa");
+            window.open("https://www.7-eleven.com.mx/app.html");
         }
     </script>
 </head>
@@ -339,12 +339,18 @@
         </div>
         <div class="fade1_text"> 
             <span class="fade1_text_title fade1_text_bold">
-             ¿Quieres un relleno de café gratis los lunes?
+             Nunca habéis visto tantas ventajas en un App
             </span>
             <br/>  
             <span class="fade1_text_light fade1_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 7px; line-height: 1.2em">
-    <strong> Isla Nublar</strong>, ahora es un sitio  <strong>abandonado</strong> por los humanos.  <strong>Los dinosaurios sobrevivientes se alimentan entre sí</strong> en la selva. Cuando el volcán inactivo de la isla empieza a <strong>mostrar actividad,</strong> Owen y Claire comienzan una campaña para <strong>rescatar</strong> a los dinosaurios de una <strong>gran extinción.</strong>  
+    <strong>Activa cupones y dinámicas descargando nuestra app</strong> <br> <br>
+
+<strong> Quinielas CocaCola:</strong>  Encuentra el código en la lata edición especial de Coca-Cola Rusia 2018 y actívalas en nuestra app.<br>
+
+<strong>RockStar:</strong> Registra tus tickets en nuestra app de todas tus compras de mínimo $50 pesos y participa para ganar Smart TVs y muchos premios más.<br>
+
+                    <strong>SKITTLES 2x1.</strong>strong> ¡Comparte el arcoíris! Llévate dos Skittles® al precio de uno. Recuerda activar tu cupón en nuestra app y presentarlo directo en tienda. <br>
 
                 </p> 
                 
