--- a/BlueTelecom/blueSlide6.html
+++ b/BlueTelecom/blueSlide6.html
@@ -248,8 +248,8 @@
     <div class="te-container">
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/sFQI76q.png" alt="" /> <img src="https://i.imgur.com/hRbzs7d.png" alt="" /> <img src="https://i.imgur.com/QSCBYy5.png" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/YzGO2n4.png" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/pwajl4B.png" alt="" /> <img src="https://i.imgur.com/BAUiiP8.png" alt="" /> <img src="https://i.imgur.com/9di8msA.png" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/d0eO4QE.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
