--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -250,8 +250,8 @@
     <div class="te-container">
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/YzGO2n4.png" alt="" /> <img src="https://i.imgur.com/59VLjXO.png" alt="" /> <img src="https://i.imgur.com/586WqmG.png" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/sFQI76q.png" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/d0eO4QE.png" alt="" /> <img src="https://i.imgur.com/dHjZ5Eq.png" alt="" /> <img src="https://i.imgur.com/drdaQYq.png" alt="" /> </div>
+                <div class="te-cover"> <img src="hhttps://i.imgur.com/pwajl4B.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
