--- a/BlueTelecom/blueSlide7.html
+++ b/BlueTelecom/blueSlide7.html
@@ -108,7 +108,7 @@
         .BlueSlide2 .te-cover,
         .BlueSlide2 .te-transition {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .BlueSlide2 .te-cover.te-hide,
@@ -119,13 +119,13 @@
 
         .BlueSlide2 .te-images {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .BlueSlide2 .te-cover>img,
         .BlueSlide2 .te-images>img {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .BlueSlide2 .te-transition.te-show {
@@ -223,7 +223,7 @@
         .cta {
 
             position: fixed;
-            top: 155px;
+            top: 145px;
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
@@ -245,7 +245,7 @@
 <body class="BlueSlide2" style="margin:0px;">
     
     <div class="bzm_wrapper carousel-wrapper size_300x250">
-       <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%;">Más Información</span></div>
+       <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%;">¡Conéctate ya!</span></div>
     
     <div class="te-container">
         <a href="%%c1;cpdir=" target="_blank">
@@ -355,7 +355,7 @@
                 _removeChildrens(front);
                 for (var i = 0; i < front.length; i++) {
                     var img = document.createElement('img');
-                    img.setAttribute('style', 'width: 300px;height: 170px;');
+                    img.setAttribute('style', 'width: 300px;height: 160px;');
                     img.setAttribute('src', urlLast);
                     front[i].appendChild(img);
                 }
@@ -363,7 +363,7 @@
                 _removeChildrens(back);
                 for (var i = 0; i < back.length; i++) {
                     img = document.createElement('img');
-                    img.setAttribute('style', 'width: 300px;height: 170px;');
+                    img.setAttribute('style', 'width: 300px;height: 160px;');
                     img.setAttribute('src', urlCurrent);
                     back[i].appendChild(img);
                 }
